# concordo_plenamente

./: CMakeLists.txt  Doxyfile  README.md
include/: canal.h  canalTexto.h  canalVoz.h  exec.h  mensagem.h  message.h  server.h  servidor.h  sistema.h  sistema.hZone.Identifier  system.h  user.h  usuario.h
latex/: annotated.tex  classCanal.tex  classCanal.tex.tmp  classCanalTexto.tex  classCanalTexto__inherit__graph.dot  classCanalVoz__inherit__graph.dot  classCanal__inherit__graph.dot  classExecutor.tex  classMensagem.tex  classServidor.tex  classSistema.tex  classUser.tex  hierarchy.tex  md_README.tex
sidegore/: channel.cpp  channel.h  chtext.h  chvoice.cpp  chvoice.h  message.cpp  server.cpp  server.h  system.h  user.cpp
source/: chtext.cpp  server.cpp  system.cpp
src/: CMakeCache.txt  Makefile  canal.cpp  canalTexto.cpp  canalVoz.cpp  cmake_install.cmake  concordo.cpp  exec.cpp  mensagem.cpp  servidor.cpp  servidores.txt  sistema.cpp  usuario.cpp  usuarios.txt
